--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
   
   <div id="container">
     <div class="contact-text" style="margin: 0">
-      <h2 style="color: var(--purple); text-transform: uppercase;">Emily Porat</h2> 
-      <h2 style="color: white; text-transform: uppercase;">UX Designer</h2>
+      <h4 style="color: white;">UX Researcher & Designer</h4>
+      <h2 style="color: var(--purple);">Emily Porat</h2> 
     </div>
 
     <div id="footer-links">
