--- a/footer.html
+++ b/footer.html
@@ -18,6 +18,7 @@
       </div>
        
       <div class="contact-text">
+        <a href="index.html"><img src="pics/logo-white.svg" class="nav-logo"></a>
         <h3 style="color: white">Contact</h3>
           <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
           <p style="color: white"><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
