--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
               <h3 style="color: black; font-size: 1.7em">I'm a detail-oriented pragmatist who is passionate about creating order from chaos. I've been designing things for 7 years, getting paid to do so for 5, and have been at Deloitte Digital for 2 ✨</h3>
 <!--               <p>I'm currently at Deloitte Digital, where my work has supported federal aid programs, nonprofits, and more.</p> -->
               <button class="secondary-btn" style="margin-right: 10px" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
-              <button class="btn" onclick="location.href='resume.pdf';" value="Download resume"; target="_blank">Download Resume</button>
+              <button class="btn" onclick="location.href='resume.pdf';" value="Download Résumé"; target="_blank">Download Resume</button>
             </div>
           </div>
         </div>
