--- a/footer.html
+++ b/footer.html
@@ -24,6 +24,6 @@
       </div>
   </div>
   </div>
-  <a href="index.html"><img src="pics/logo-white.svg" class="nav-logo"></a>
+<!--   <a href="index.html" style="float: left"><img src="pics/logo-white.svg" class="nav-logo"></a> -->
   <p id="copyright">© Emily Porat 2021</p>
 </div>
