updated read times and btn hover

--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
             </div>
           </div>
         </div>
+
+        <img src="pics/about/emily4.png" class="big-pic">
+
       </div>
 
       <div class="panel context">
