--- a/fha.html
+++ b/fha.html
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 
-		<img src="pics/fha-branding.png" class="big-pic">
+		<img src="pics/FHA_featured.png" class="big-pic">
 	</div>
 
 	<div class="panel context">
@@ -68,7 +68,7 @@
 			<p>	
 				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-debth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
 			</p>
-			<p><em>Read time: 5 mins</em></p>
+			<p><em>5 min read time</em></p>
 		</div>
 
 		<div class="context-specifics">
