--- a/fms-pos.html
+++ b/fms-pos.html
@@ -72,7 +72,9 @@
 			<p>
 				Sophisticated applications can be built quickly by using the wide range of 'out of the box' Salesforce components. However, this particular system has many complex requirements, and custom-designed interfaces were required in three major areas: customer data management, inventory management, and the point of sale (POS) checkout system.
 			</p>
-			<p><i>Please note: some data fields and details are omitted due to restrictions surrounding government contracting. Unless otherwise noted, I personally designed every screen below (with guidance from my lead).</i></p>
+			<p><em>Please note: some data fields and details are omitted due to restrictions surrounding government contracting. Unless otherwise noted, I personally designed every screen below (with guidance from my lead).</i></em>
+
+			<p><em>18 min read time (I know it's too long! I'm working on it!)</em></b>
 		</div>
 
 		<div class="context-specifics">
