updated read time style to be more bold

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -74,7 +74,7 @@
 			</p>
 			<p><em>Please note: some data fields and details are omitted due to restrictions surrounding government contracting. Unless otherwise noted, I personally designed every screen below (with guidance from my lead).</i></em>
 
-			<p><em>18 min read time (I know it's too long! I'm working on it!)</em></b>
+			<p><em style="font-weight: 900">18 min read time (I know it's too long! I'm working on it!)</em></b>
 		</div>
 
 		<div class="context-specifics">
