--- a/hud.html
+++ b/hud.html
@@ -73,7 +73,7 @@
 				I was brought in to organize and ensure consistency across the work another Visual Designer had already done. The Visual Designer I worked with had an excellent creative vision and illustration skills (not my strong suit), but was moving quickly and hadn't created any symbols or organized his files. Believe it or not, I relish in these kinds of organizational tasks, so it was a match made in heaven.
 			</p>
 
-			<p><em>4 min read time</em></p>
+			<p><em style="font-weight: 900">4 min read time</em></p>
 
 		</div>
 
