--- a/ef.html
+++ b/ef.html
@@ -73,7 +73,7 @@
 				With these goals in mind, I conducted a heuristic evaluation, stakeholder and user interviews, and developed Modes & Mindsets and Journey Maps to illustrate the user experience and inform future design & dev efforts.
 			</p>
 
-			<p><em>Read time: TBD</em></p>
+			<p><em style="font-weight: 900">X min read time</em></p>
 
 		</div>
 
