--- a/fha.html
+++ b/fha.html
@@ -68,7 +68,7 @@
 			<p>	
 				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-debth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
 			</p>
-			<p><em>5 min read time</em></p>
+			<p><em style="font-weight: 900">5 min read time</em></p>
 		</div>
 
 		<div class="context-specifics">
