--- a/fha.html
+++ b/fha.html
@@ -66,7 +66,10 @@
 			</h3>
 			<div class="short-divider"></div>
 			<p>	
-				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-depth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
+				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site. Their primary audience is first-time homebuyers interested in an FHA-insured mortgage, which allows folks to put as little as 3.5% down on the purchase of a single family home. 	
+			</p>
+			<p>
+				We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-depth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
 			</p>
 			<p><em style="font-weight: 900">5 min read time</em></p>
 		</div>
