--- a/ef.html
+++ b/ef.html
@@ -73,11 +73,13 @@
 				With these goals in mind, I conducted a heuristic evaluation, stakeholder and user interviews, and developed Modes & Mindsets and Journey Maps to illustrate the user experience and inform future design & dev efforts.
 			</p>
 
-			<p><em style="font-weight: 900">X min read time</em></p>
+			<p><em>More info coming soon!</em></p>
+
+			<!-- <p><em style="font-weight: 900">X min read time</em></p> -->
 
 		</div>
 
-		<div class="context-specifics">
+<!-- 		<div class="context-specifics">
 			<h4>Length</h4>
 			<div class="context-description"><p>12 months</p></div>
 			<h4>Team</h4>
@@ -85,10 +87,10 @@
 			<h4>Skills</h4> 
 			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
 			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract</p></div>
-		</div>
+		</div> -->
 	</div>
 
-	<div class="full-width-mid-page">
+<!-- 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--mediumgray)">
 			<h2 style="padding-top: 5%;">Where we started</h2>
 			<h3 style="padding-left: 15%; padding-right: 15%">There weren't any symbols or text styles. Groups were ad-hoc and most didn't have labels.</h3>
@@ -111,7 +113,7 @@
 
 				<img src="pics/HUD/audit-components.png" class="pic-right">
 			</div>
-	</div>
+	</div> -->
 
 
 	  	
