--- a/projects.html
+++ b/projects.html
@@ -57,9 +57,9 @@
   <!-- Featured project -->
   <div class="section-large" style="background-color: var(--purple);">
     <div class="project-info-large">
-      <h4>2021 • Deloitte Digital</h4>
-      <h2>Epilepsy Foundation Discovery</h2>
-      <h3>I evaluated the overarching user experience of epilepsy.com and provided strategic recommendations that fed into a product roadmap and vision.</h3>
+      <h4>2021 • Deloitte Digital • Health</h4>
+      <h2>Health Nonprofit Discovery</h2>
+      <h3>I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</h3>
       <button id="myBtn" onclick="location.href='ef.html';" value="Go to EF project page">
         <h4><i class="fas fa-lock"></i> Learn More</h4>
       </button>
@@ -69,9 +69,9 @@
 
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
-      <h4>2020 - 2021 • Deloitte Digital</h4>
-      <h2>HUD Design System</h2>
-      <h3>As part of HUD.gov's redesign, I conducted a component audit of existing high-fidelity mockups. From there, I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
+      <h4>2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h2>Federal Design System</h2>
+      <h3>I conducted a component audit of existing high-fidelity mockups. From there, I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
       <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
         <h4><i class="fas fa-lock"></i> Learn More</h4>
       </button>
@@ -81,9 +81,9 @@
 
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
-      <h4>2020 - 2021 • Deloitte Digital</h4>
-      <h2>FHA Website Redesign</h2>
-      <h3>I co-led the redesign and launch of fha.gov, the Federal Housing Administration’s consumer-facing site, which serves over 8 million single family homeowners.</h3>
+      <h4>2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h2>Federal Website Redesign</h2>
+      <h3>I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</h3>
       <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
         <h4><i class="fas fa-lock"></i> Learn More</h4>
       </button>
@@ -94,8 +94,8 @@
     <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
-        <h4>2019 - 2020 • Deloitte Digital</h4>
-        <h2>Food Management System</h2>
+        <h4>2019 - 2020 • Deloitte Digital • Food & Nutrition</h4>
+        <h2>Federal Food Management System</h2>
         <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
         <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
           <h4><i class="fas fa-lock"></i> Learn More</h4>
