updated btn style on modals

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -37,11 +37,11 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
-			<h3>Food Management System</h3>
+			<h3>Federal Food Management System</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
-			<button onclick="checkPassword()">Submit</button>
+			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
 		</div>
 	</div>
 
