--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
   <!-- Featured project -->
   <div class="section-large" style="background-color: var(--purple);">
     <div class="project-info-large">
-      <h4>2021 • Deloitte Digital • Health</h4>
+      <h4 style="margin-bottom: 15px;">2021 • Deloitte Digital • Health</h4>
       <h2>Health Nonprofit Discovery</h2>
       <h3>I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</h3>
       <button id="myBtn" onclick="location.href='ef.html';" value="Go to EF project page">
@@ -69,7 +69,7 @@
 
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
-      <h4>2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h4 style="margin-bottom: 15px;">2020 - 2021 • Deloitte Digital • Housing</h4>
       <h2>Federal Design System</h2>
       <h3>I conducted a component audit of existing high-fidelity mockups. From there, I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
       <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
@@ -81,7 +81,7 @@
 
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
-      <h4>2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h4 style="margin-bottom: 15px;">2020 - 2021 • Deloitte Digital • Housing</h4>
       <h2>Federal Website Redesign</h2>
       <h3>I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</h3>
       <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -94,7 +94,7 @@
     <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
-        <h4>2019 - 2020 • Deloitte Digital • Food & Nutrition</h4>
+        <h4 style="margin-bottom: 15px;">2019 - 2020 • Deloitte Digital • Food & Nutrition</h4>
         <h2>Federal Food Management System</h2>
         <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
         <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
@@ -107,7 +107,7 @@
     <!-- Featured project -->
     <div class="section" style="background-color: var(--purple); float: left;">
       <div class="project-info">
-        <h4>Summer 2018 • Deloitte Digital</h4>
+        <h4 style="margin-bottom: 15px;">Summer 2018 • Deloitte Digital</h4>
         <h2>Learning & Development Portal</h2>
         <h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3> 
         <button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
@@ -121,7 +121,7 @@
 
     <div class="section" style="background-color: var(--green); float: right;">
       <div class="project-info">
-        <h4>Fall 2018 • Carnegie Mellon University</h4>
+        <h4 style="margin-bottom: 15px;">Fall 2018 • Carnegie Mellon University</h4>
         <h2 >RSVP'd</h2>
         <h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
         <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
